--- a/public/css/myStly.css
+++ b/public/css/myStly.css
@@ -42,7 +42,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-
 }
 
 .image-preview {
@@ -55,15 +54,26 @@
     width: auto;
     height: auto;
     object-fit: cover;
-
 }
 .close-button {
     position: absolute;
     top: 5px;
     right: 5px;
-    color:rgba(255, 252, 252, 0.8);
+    color: rgba(255, 252, 252, 0.8);
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 10%;
     padding: 5px;
     cursor: pointer;
+}
+
+.event-photos {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.event-photo {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    margin: 5px;
 }
